--- a/publications.bib
+++ b/publications.bib
@@ -9,8 +9,7 @@
   year = {2023},
   month = {Sep},
   publisher = {American Physical Society},
-  doi = {10.1103/PRXQuantum.4.030335},
-  url = {https://link.aps.org/doi/10.1103/PRXQuantum.4.030335}
+  doi = {10.1103/PRXQuantum.4.030335}
 }
 
 @misc{müller2024limitationsquantumapproximateoptimization,
@@ -19,8 +18,7 @@
       year={2024},
       eprint={2411.19388},
       archivePrefix={arXiv},
-      primaryClass={quant-ph},
-      url={https://arxiv.org/abs/2411.19388}, 
+      primaryClass={quant-ph}
 }
 
 
@@ -30,8 +28,7 @@
       year={2024},
       eprint={2411.07646},
       archivePrefix={arXiv},
-      primaryClass={quant-ph},
-      url={https://arxiv.org/abs/2411.07646}, 
+      primaryClass={quant-ph}
 }
 
 
@@ -46,8 +43,7 @@
   year = {2024},
   month = {Jul},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevA.110.012611},
-  url = {https://link.aps.org/doi/10.1103/PhysRevA.110.012611}
+  doi = {10.1103/PhysRevA.110.012611}
 }
 
 
@@ -62,8 +58,7 @@
   year = {2024},
   month = {Feb},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevResearch.6.013220},
-  url = {https://link.aps.org/doi/10.1103/PhysRevResearch.6.013220}
+  doi = {10.1103/PhysRevResearch.6.013220}
 }
 
 @article{PhysRevResearch.6.043254,
@@ -77,14 +72,14 @@
   year = {2024},
   month = {Dec},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevResearch.6.043254},
-  url = {https://link.aps.org/doi/10.1103/PhysRevResearch.6.043254}
+  doi = {10.1103/PhysRevResearch.6.043254}
 }
 
 
-@article{Bode2023, doi = {10.21105/joss.05364}, url = {https://doi.org/10.21105/joss.05364}, year = {2023}, publisher = {The Open Journal}, volume = {8}, number = {86}, pages = {5364}, 
-    author = {Tim Bode and Dmitry Bagrets and Aditi Misra-Spieldenner and Tobias Stollenwerk and Frank K. Wilhelm}, 
-    title = {{QAOA.jl: Toolkit for the Quantum and Mean-Field Approximate Optimization Algorithms}}, journal = {Journal of Open Source Software} }
+@article{Bode2023, doi = {10.21105/joss.05364}, 
+  year = {2023}, publisher = {The Open Journal}, volume = {8}, number = {86}, pages = {5364}, 
+  author = {Tim Bode and Dmitry Bagrets and Aditi Misra-Spieldenner and Tobias Stollenwerk and Frank K. Wilhelm}, 
+  title = {{QAOA.jl: Toolkit for the Quantum and Mean-Field Approximate Optimization Algorithms}}, journal = {Journal of Open Source Software} }
 
 
 @Article{10.21468/SciPostPhysCore.5.2.030,
@@ -95,13 +90,11 @@
 	pages={030},
 	year={2022},
 	publisher={SciPost},
-	doi={10.21468/SciPostPhysCore.5.2.030},
-	url={https://scipost.org/10.21468/SciPostPhysCore.5.2.030},
+	doi={10.21468/SciPostPhysCore.5.2.030}
 }
 
 @article{Bode_2022,
 doi = {10.1088/1751-8121/ac73c6},
-url = {https://dx.doi.org/10.1088/1751-8121/ac73c6},
 year = {2022},
 month = {jun},
 publisher = {IOP Publishing},
@@ -122,8 +115,7 @@ volume = {372},
 number = {6537},
 pages = {88-91},
 year = {2021},
-doi = {10.1126/science.abe9869},
-URL = {https://www.science.org/doi/abs/10.1126/science.abe9869}}
+doi = {10.1126/science.abe9869}}
 
 
 @article{PhysRevA.100.043803,
@@ -137,8 +129,7 @@ URL = {https://www.science.org/doi/abs/10.1126/science.abe9869}}
   year = {2019},
   month = {Oct},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevA.100.043803},
-  url = {https://link.aps.org/doi/10.1103/PhysRevA.100.043803}
+  doi = {10.1103/PhysRevA.100.043803}
 }
 
 @article{PhysRevA.98.023626,
@@ -152,8 +143,7 @@ URL = {https://www.science.org/doi/abs/10.1126/science.abe9869}}
   year = {2018},
   month = {Aug},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevA.98.023626},
-  url = {https://link.aps.org/doi/10.1103/PhysRevA.98.023626}
+  doi = {10.1103/PhysRevA.98.023626}
 }
 
 @phdthesis{handle:20.500.11811/8961,
