--- a/publications.bib
+++ b/publications.bib
@@ -1,3 +1,42 @@
+@article{müller2024limitationsquantumapproximateoptimization,
+  title = {Limitations of quantum approximate optimization in solving generic higher-order constraint-satisfaction problems},
+  author = {Müller, Thorge and Singh, Ajainderpal and Wilhelm, Frank K. and Bode, Tim},
+  journal = {Phys. Rev. Res.},
+  volume = {7},
+  issue = {2},
+  pages = {023165},
+  numpages = {9},
+  year = {2025},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevResearch.7.023165}
+}
+
+
+@misc{shapiro2024quantumsimulationdickeisingmodel,
+      title={{Quantum Simulation of the Dicke-Ising Model via Digital-Analog Algorithms}}, 
+      author={Dmitriy S. Shapiro and Yannik Weber and Tim Bode and Frank K. Wilhelm and Dmitry Bagrets},
+      year={2024},
+      eprint={2412.14285},
+      archivePrefix={arXiv},
+      primaryClass={quant-ph}
+}
+
+
+@article{PhysRevA.111.032411,
+  title = {Quantum combinatorial optimization beyond the variational paradigm: Simple schedules for hard problems},
+  author = {Bode, Tim and Ramesh, Krish and Stollenwerk, Tobias},
+  journal = {Phys. Rev. A},
+  volume = {111},
+  issue = {3},
+  pages = {032411},
+  numpages = {11},
+  year = {2025},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.111.032411}
+}
+
 @article{PRXQuantum.4.030335,
   title = {{Mean-Field Approximate Optimization Algorithm}},
   author = {Misra-Spieldenner, Aditi and Bode, Tim and Schuhmacher, Peter K. and Stollenwerk, Tobias and Bagrets, Dmitry and Wilhelm, Frank K.},
@@ -7,28 +46,8 @@
   pages = {030335},
   numpages = {19},
   year = {2023},
-  month = {Sep},
   publisher = {American Physical Society},
   doi = {10.1103/PRXQuantum.4.030335}
-}
-
-@misc{müller2024limitationsquantumapproximateoptimization,
-      title={{Limitations of Quantum Approximate Optimization in Solving Generic Higher-Order Constraint-Satisfaction Problems}}, 
-      author={Thorge Müller and Ajainderpal Singh and Frank K. Wilhelm and Tim Bode},
-      year={2024},
-      eprint={2411.19388},
-      archivePrefix={arXiv},
-      primaryClass={quant-ph}
-}
-
-
-@misc{bode2024quantumcombinatorialoptimizationvariational,
-      title={Quantum combinatorial optimization beyond the variational paradigm: simple schedules for hard problems}, 
-      author={Tim Bode and Krish Ramesh and Tobias Stollenwerk},
-      year={2024},
-      eprint={2411.07646},
-      archivePrefix={arXiv},
-      primaryClass={quant-ph}
 }
 
 
@@ -41,7 +60,6 @@
   pages = {012611},
   numpages = {13},
   year = {2024},
-  month = {Jul},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevA.110.012611}
 }
@@ -56,7 +74,6 @@
   pages = {013220},
   numpages = {13},
   year = {2024},
-  month = {Feb},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevResearch.6.013220}
 }
@@ -70,7 +87,6 @@
   pages = {043254},
   numpages = {14},
   year = {2024},
-  month = {Dec},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevResearch.6.043254}
 }
@@ -79,7 +95,9 @@
 @article{Bode2023, doi = {10.21105/joss.05364}, 
   year = {2023}, publisher = {The Open Journal}, volume = {8}, number = {86}, pages = {5364}, 
   author = {Tim Bode and Dmitry Bagrets and Aditi Misra-Spieldenner and Tobias Stollenwerk and Frank K. Wilhelm}, 
-  title = {{QAOA.jl: Toolkit for the Quantum and Mean-Field Approximate Optimization Algorithms}}, journal = {Journal of Open Source Software} }
+  title = {{QAOA.jl: Toolkit for the Quantum and Mean-Field Approximate Optimization Algorithms}}, 
+  journal = {Journal of Open Source Software} 
+}
 
 
 @Article{10.21468/SciPostPhysCore.5.2.030,
@@ -96,7 +114,6 @@
 @article{Bode_2022,
 doi = {10.1088/1751-8121/ac73c6},
 year = {2022},
-month = {jun},
 publisher = {IOP Publishing},
 volume = {55},
 number = {26},
@@ -120,14 +137,13 @@ doi = {10.1126/science.abe9869}}
 
 @article{PhysRevA.100.043803,
   title = {{Fluctuation dynamics of an open photon Bose-Einstein condensate}},
-  author = {Ozturk, Fahri Emre and Lappe, Tim and Hellmann, G\"oran and Schmitt, Julian and Klaers, Jan and Vewinger, Frank and Kroha, Johann and Weitz, Martin},
+  author = {Öztürk, Fahri Emre and Lappe, Tim and Hellmann, Göran and Schmitt, Julian and Klaers, Jan and Vewinger, Frank and Kroha, Johann and Weitz, Martin},
   journal = {Phys. Rev. A},
   volume = {100},
   issue = {4},
   pages = {043803},
   numpages = {8},
   year = {2019},
-  month = {Oct},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevA.100.043803}
 }
@@ -141,7 +157,6 @@ doi = {10.1126/science.abe9869}}
   pages = {023626},
   numpages = {12},
   year = {2018},
-  month = {Aug},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevA.98.023626}
 }
@@ -151,6 +166,5 @@ author = {{Tim Lappe}},
 title = {{Non-Markovian Dynamics of Open Bose-Einstein Condensates}},
 school = {Rheinische Friedrich-Wilhelms-Universität Bonn},
 year = 2021,
-month = mar,
 url = {https://hdl.handle.net/20.500.11811/8961}
 }
